2006-01-30 Anatoly Sokolov <aesok@post.ru>

	* configure.ac: add tests for the ATmega406 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATmega406.
	* include/avr/io.h: (Ditto.).
	* include/avr/wdt.h: (Ditto.).
	* include/avr/iotm406.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATmega406.
	* doc/api/using-tools.dox: (Ditto.)
 	* xml/patch-headers.py: add ATmega406.
	* doc/api/vectortable.dox: regenerate using patch-headers.py.

2006-01-29 Anatoly Sokolov <aesok@post.ru>

	* doc/api/main_page.dox: Move AT90CANxxx devices to Misc group.
	[Fixed bug #15519] 
	* include/avr/iotn2313.h (SIG_OUTPUT_COMPARE0A): Rename from 
	SIG_OUTPUT_COPMARE0A.
	[Fixed bug #15522]

2006-01-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix bug #15494: Compile warning and errors if compiler flag
	-Wundef flag specified
	* include/inttypes.h: turn #if on undefined macros into #ifdef.
	* include/stdint.h: always define __USING_MINT8 (to 0 or 1).
	* include/avr/boot.h: use __USING_MINT8 the new way.

2006-01-22 Anatoly Sokolov <aesok@post.ru>

	* include/avr/iotn2313.h (SPM_PAGESIZE): Add. 
	* include/avr/iotn24.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn25.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn261.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn44.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn45.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn461.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn84.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn85.h (SPM_PAGESIZE): (Ditto.).
	* include/avr/iotn861.h (SPM_PAGESIZE): (Ditto.).

2006-01-09 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* Makefile.am (EXTRA_DIST): add ChangeLog-2005.

2006-01-09 Anatoly Sokolov <aesok@post.ru>

	* libm/fplib/acos.S : Use XCALL/XJMP instead RCALL/RJMP 
	for calling __addsf3/__subsf3/__mulsf3/__divsf3 functions.
	* libm/fplib/cosh.S : (Ditto.).
	* libm/fplib/exp.S : (Ditto.).
	* libm/fplib/fmod.S : (Ditto.).